--- a/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
@@ -104,7 +104,7 @@
 
                     <h:panelGrid columns="1" styleClass="without-spaces ui-grid-col-12">
                         <p:outputLabel value="#{bundle.Name}:" />                    
-                        <p:inputTextarea id="nameDoc" value="#{_bean.editedItem.name}"
+                        <p:inputTextarea id="nameItem" value="#{_bean.editedItem.name}"
                                          title="#{bundle.BriefDescriptionDocument}"
                                          styleClass="ui-grid-col-12"
                                          rows="1" autoResize="true" 
