--- a/escom-bpm-web/src/main/webapp/view/folders/folder-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/folders/folder-card.xhtml
@@ -13,7 +13,7 @@
             <p:panelGrid layout="grid" columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 ui-panelgrid-blank col-padding">
 
                 <p:outputLabel value="#{bundle.Name}:" />
-                <p:inputText value="#{_bean.editedItem.name}" id="name" style="width: 100%;"
+                <p:inputText value="#{_bean.editedItem.name}" id="nameItem" style="width: 100%;"
                                  onkeypress="checkEsc(#{_bean.cancelBtnName});"
                                  readonly="#{!_bean.isHaveRightEdit()}"
                                  onchange="return itemChange = 1;"
