--- a/escom-bpm-web/src/main/webapp/view/partners/groups/partnergroup-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/groups/partnergroup-card.xhtml
@@ -20,7 +20,7 @@
                 <p:message for="code"/>
                     
                 <p:outputLabel value="#{bundle.Name}" />
-                <p:inputText value="#{_bean.editedItem.name}" id="name" styleClass="ui-grid-col-12"
+                <p:inputText value="#{_bean.editedItem.name}" id="nameItem" styleClass="ui-grid-col-12"
                              title="#{bundle.GroupName}"
                              disabled="#{_bean.isReadOnly()}"
                              onkeypress="checkEsc(#{_bean.cancelBtnName});"
