--- a/escom-bpm-web/src/main/webapp/view/partners/partner-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/partner-explorer.xhtml
@@ -31,7 +31,7 @@
     <ui:define name="searche">
         <p:outputLabel value="#{bundle.Code}"/>        
         <p:inputText id="codeSearche" title="#{bundle.HelpSearcheContext}"
-                     styleClass="widthMin100"
+                     styleClass="ui-grid-col-12"
                      value="#{explorerBean.model.codeSearche}"
                      onkeypress="keyPress();">
         </p:inputText>
