--- a/escom-bpm-web/src/main/webapp/view/staffs/staff-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/staffs/staff-card.xhtml
@@ -47,7 +47,7 @@
                 
                 <p:outputLabel value="#{bundle.Name}" />
                 <h:panelGroup id="staffGroup" layout="grid" styleClass="ui-grid-col-12">
-                    <p:inputTextarea id="name" value="#{_bean.editedItem.name}" 
+                    <p:inputTextarea id="nameItem" value="#{_bean.editedItem.name}" 
                                     styleClass="ui-grid-col-12"
                                     rows="1" autoResize="true"
                                     disabled="#{_bean.isReadOnly()}"
