--- a/escom-bpm-web/src/main/webapp/view/users/user-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/user-card.xhtml
@@ -15,7 +15,7 @@
                              columnClasses="ui-grid-col-12" >
 
                     <p:outputLabel value="#{bundle.SecondName}" />
-                    <p:inputText id="secondName" value="#{_bean.editedItem.secondName}" 
+                    <p:inputText id="nameItem" value="#{_bean.editedItem.secondName}" 
                                  styleClass="ui-grid-col-12"
                                  disabled="#{_bean.isReadOnly()}"
                                  onkeypress="checkEsc(#{_bean.cancelBtnName});"
