--- a/escom-bpm-web/src/main/webapp/view/partners/partner-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/partner-card.xhtml
@@ -33,7 +33,7 @@
                 <p:message for="type" display="tooltip"/>
 
                 <p:outputLabel value="#{bundle.Name}" />
-                <p:inputText value="#{_bean.editedItem.name}" id="name"
+                <p:inputText value="#{_bean.editedItem.name}" id="nameItem"
                              disabled="#{_bean.isReadOnly()}"
                              required="#{param['isRequired'] == 'true'}" 
                              maxlength="100"
@@ -42,7 +42,6 @@
                              onchange="return itemChange = 1;">
                     <f:validateLength minimum="1" maximum="50"/>
                 </p:inputText>
-                <p:message for="name" display="tooltip"/>
 
                 <p:outputLabel value="#{bundle.FullName}" />
                 <p:inputTextarea value="#{_bean.editedItem.fullName}" id="fullName"
