--- a/escom-bpm-web/src/main/webapp/view/partners/types/partnertype-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/types/partnertype-card.xhtml
@@ -12,14 +12,13 @@
         <p:tab id="cardTab" title="#{bundle.Explorer}">     
             <p:panelGrid columns="1" styleClass="ui-grid-col-12 ui-panelgrid-blank" layout="grid" columnClasses="ui-grid-col-12 col-padding" >
                 <p:outputLabel value="#{bundle.ShortName}" />
-                <p:inputText id="name" value="#{_bean.editedItem.name}" 
+                <p:inputText id="nameItem" value="#{_bean.editedItem.name}" 
                                  onkeypress="checkEsc(#{_bean.cancelBtnName});"
                                  onchange="return itemChange = 1;"
                                  styleClass="ui-grid-col-12"
                                  disabled="#{_bean.isReadOnly()}"
                                  required="#{param['isRequired'] == 'true'}" 
                                  requiredMessage="#{bundle.Field} [#{bundle.ShortName}] #{bundle.MustBeFilled}"/>
-                <p:message for="name"/>
                 
                 <p:outputLabel value="#{bundle.FullName}" />
                 <p:inputTextarea id="fullName" value="#{_bean.editedItem.fullName}" 
@@ -28,7 +27,6 @@
                                  disabled="#{_bean.isReadOnly()}"
                                  onchange="return itemChange = 1;"
                                  styleClass="ui-grid-col-12"/>
-                <p:message for="fullName"/>
             </p:panelGrid>                                
         </p:tab>    
 
