--- a/escom-bpm-web/src/main/webapp/view/staffs/posts/post-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/staffs/posts/post-card.xhtml
@@ -12,14 +12,13 @@
             <p:panelGrid columns="1" layout="grid" styleClass="ui-panelgrid-blank ui-grid-col-12"
                          columnClasses="ui-grid-col-12">
                 <p:outputLabel value="#{bundle.Name}" />
-                    <p:inputText id="postName" value="#{_bean.editedItem.name}" 
+                    <p:inputText id="nameItem" value="#{_bean.editedItem.name}" 
                                  styleClass="ui-grid-col-12 col-padding"
                                  onkeypress="checkEsc(#{_bean.cancelBtnName});"
                                  onchange="return itemChange = 1;"
                                  disabled="#{_bean.isReadOnly()}"
                                  required="#{param['isRequired'] == 'true'}"
                                  requiredMessage="#{bundle.Field} [#{bundle.Name}] #{bundle.MustBeFilled}"/>
-                    <p:message for="postName" display="icon"/>
             </p:panelGrid>
           </p:tab>                
 
