--- a/escom-bpm-web/src/main/webapp/resources/css/em_style1.css
+++ b/escom-bpm-web/src/main/webapp/resources/css/em_style1.css
@@ -74,6 +74,10 @@ body{
   text-align: center !important;  
 }
 
+.colTop{
+    vertical-align: top !important;
+}
+
 .ui-outputlabel{ 
     text-align: left;
     vertical-align: central;
