--- a/escom-bpm-web/src/main/webapp/view/admin/object-admin.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/object-admin.xhtml
@@ -86,6 +86,7 @@
                             </p:tab>
                         </p:tabView> 
                     </p:panelGrid>
+                    <ui:include src="/view/common/confirm-dlg.xhtml"/>
                 </h:form>
             </pe:layoutPane>
         </pe:layout>
