--- a/escom-bpm-web/src/main/webapp/view/common/item-select-list-btn.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/item-select-list-btn.xhtml
@@ -28,12 +28,14 @@
                              valueChangeListener="#{_bean[_actionSelect]}"                             
                              required="#{param['isRequired'] == _required}" 
                              requiredMessage="#{bundle.Field} [#{_titleItem}] #{bundle.MustBeFilled}"
-                             filter="true" filterMatchMode="startsWith">
+                             filter="true"
+                             filterMatchMode="startsWith">
                 <p:ajax update="#{_itemPanel} #{_update}" partialSubmit="true" oncomplete="itemChange = 1;"/>
-                <f:selectItems value="#{_items}" var="item" itemValue="#{item}" itemLabel="#{item.nameEndElipse}"/>
+                <f:selectItems value="#{_items}" var="item" itemValue="#{item}" itemLabel="#{empty _itemLabel ? item.nameEndElipse : _itemLabel}"/>
                 <f:selectItem itemValue="#{null}" itemLabel="#{bundle.EmptySelData}"/>
                 <f:converter converterId="#{_converter}" />
-                <f:validator validatorId="#{_validator}" />
+                <f:validator validatorId="#{empty _validator ? 'emptyValidator' : _validator}" />
+                <f:ajax event="change" render="#{_itemPanel}" />
             </p:selectOneMenu>
 
             <p:splitButton  icon="ui-icon-extlink" disabled="#{_disabled}" title="#{bundle.Select}"
