--- a/escom-bpm-web/src/main/webapp/view/common/item-select-list-btn.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/item-select-list-btn.xhtml
@@ -8,11 +8,12 @@
         <p:commandButton id="#{_itemPanel}_btn" 
                          process="#{_itemPanel}_btn"
                          onstart="PF('statusDialog').show()"
-                          oncomplete="PF('statusDialog').hide();"
+                         oncomplete="PF('statusDialog').hide();"
                          actionListener="#{_selectorBean.onOneSelectItem()}" style="display: none;">
             <p:ajax event="dialogReturn" listener="#{_bean[_actionSelect]}" 
                     update="#{_update} #{_itemPanel}"/>
         </p:commandButton>
+
         <p:commandButton id="#{_itemPanel}_btnOpenCard" actionListener="#{_selectorBean.prepEditItem(_itemValue)}"
                          onstart="PF('statusDialog').show()"
                          oncomplete="PF('statusDialog').hide();"
@@ -31,7 +32,7 @@
                              filter="true"
                              filterMatchMode="startsWith">
                 <p:ajax update="#{_itemPanel} #{_update}" partialSubmit="true" oncomplete="itemChange = 1;"/>
-                <f:selectItems value="#{_items}" var="item" itemValue="#{item}" itemLabel="#{empty _itemLabel ? item.nameEndElipse : _itemLabel}"/>
+                <f:selectItems value="#{_items}" var="item" itemValue="#{item}" itemLabel="#{item.nameEndElipse}"/>
                 <f:selectItem itemValue="#{null}" itemLabel="#{bundle.EmptySelData}"/>
                 <f:converter converterId="#{_converter}" />
                 <f:validator validatorId="#{empty _validator ? 'emptyValidator' : _validator}" />
