--- a/escom-bpm-web/src/main/webapp/view/users/user-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/user-card.xhtml
@@ -122,19 +122,18 @@
 
             <p:panelGrid columns="2" layout="grid" styleClass="ui-panelgrid-blank" columnClasses="ui-grid-col-3, ui-grid-col-12" >
                 <p:outputLabel value="#{bundle.Folder}" />
-                <ui:include src="/view/common/item-select-list-btn.xhtml" >
+                <ui:include src="/view/common/item-select-btn.xhtml" >
                     <ui:param name="_itemValue" value="#{_bean.editedItem.inbox}"/>
                     <ui:param name="_itemLabel" value="#{_bean.editedItem.inbox.path}"/>
                     <ui:param name="_required" value="#{false}" />
                     <ui:param name="_disabled" value="#{_bean.isReadOnly()}"/>
-                    <ui:param name="_converter" value="folderConvertor" />
-                    <ui:param name="_validator" value="escom.userFolderValidator" />
                     <ui:param name="_itemPanel" value="folderPanel"/>
                     <ui:param name="_titleItem" value="#{bundle.Folder}"/>
                     <ui:param name="_selectorBean" value="#{foldersBean}"/>
                     <ui:param name="_items" value="#{foldersBean.findAll()}"/>
                     <ui:param name="_actionClear" value="setInbox"/>
                     <ui:param name="_actionSelect" value="onInboxSelected"/>
+                    <ui:param name="_validateAction" value="checkFolder"/>
                     <ui:param name="_update" value=""/>
                 </ui:include>
             </p:panelGrid>
